Add sbt-scripted tests.